--- a/project1.html
+++ b/project1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Simple Project Showcase</title>
-    <link rel="stylesheet" href="project1.css"/>
+    <link rel="stylesheet" href="projecta1.css"/>
     
 </head>
 <body>
@@ -33,3 +33,4 @@
     </footer>
 </body>
 </html>
+
